--- a/css/gems.css
+++ b/css/gems.css
@@ -1,44 +1,43 @@
 /* Select the image with a id of ruby */
 
-#ruby  {
+/*#ruby  {
   position: absolute;
   z-index: 1;
   top: 315px;
   left: 175px;
-}
+}*/
 
 /* Select the image with class of emerald */
 
-.emerald {
+/*.emerald {
   position: absolute;
   z-index: 2;
   top: 350px;
   left: 369px;
-}
+}*/
 
 /* Select the image inside the element with an id of sand (using its descendant relationship) */
 
-#sand img{
+/*#sand img{
   position: absolute;
   z-index: 5;
   top: 315px;
   left: 275px;
-}
+}*/
 
 /* Select the image with the class "yellow_diamond" */
 
-.yellow_diamond {
+/*.yellow_diamond {
   position: absolute;
   z-index: 4;
   top: 325px;
   left: 200px;
-}
+}*/
 
 /* Select the image that has ad id of diamond */
-#diamond{
+img[alt="diamond"]{
   position: absolute;
   z-index: 3;
   top: 300px;
   left: 223px;
 }
-
