--- a/css/gems.css
+++ b/css/gems.css
@@ -27,7 +27,7 @@
 
 /* Select the image with the class "yellow_diamond" */
 
-/*.yellow_diamond {
+/*#ocean + img {
   position: absolute;
   z-index: 4;
   top: 325px;
@@ -35,9 +35,9 @@
 }*/
 
 /* Select the image that has ad id of diamond */
-img[alt="Diamond"]{
+/*img[alt="Diamond"]{
   position: absolute;
   z-index: 3;
   top: 300px;
   left: 223px;
-}
+}*/
